import {
  Column,
  CreateDateColumn,
  DeleteDateColumn,
  Entity,
  OneToMany,
  PrimaryGeneratedColumn,
  UpdateDateColumn,
} from 'typeorm';
import { ZoneMemberEntity } from './zone-member.entity';

export enum ZoneType {
  PICKUP = 'PICKUP',
  DROPOFF = 'DROPOFF',
}

export enum ZoneStatus {
  ACTIVE = 'ACTIVE',
  STALE = 'STALE',
}

@Entity('zones')
export class ZoneEntity {
  @PrimaryGeneratedColumn('uuid')
  id!: string;

  @Column({ type: 'varchar', length: 255 })
  name!: string;

  @Column({ type: 'enum', enum: ZoneType, enumName: 'zone_type_enum' })
  type!: ZoneType;

  /** Hex color (#RRGGBB) used to render the zone's slots on the map. */
  @Column({ type: 'varchar', length: 9, nullable: true })
  color!: string | null;

  /** Unique sequential ID used to name openTCS locations. NULL for PICKUP zones. */
  @Column({ name: 'kernel_id', type: 'integer', nullable: true, unique: true })
  kernelId!: number | null;

  /** openTCS plant model this zone was drawn on. NULL for zones created before map scoping. */
  @Column({
    name: 'plant_model_name',
    type: 'varchar',
    length: 255,
    nullable: true,
  })
  plantModelName!: string | null;

  @Column({
    type: 'enum',
    enum: ZoneStatus,
    enumName: 'zone_status_enum',
    default: ZoneStatus.ACTIVE,
  })
  status!: ZoneStatus;

  @OneToMany(() => ZoneMemberEntity, (m) => m.zone, {
    cascade: true,
    eager: true,
  })
  members!: ZoneMemberEntity[];

  @CreateDateColumn({ name: 'created_at', type: 'timestamptz' })
  createdAt!: Date;

  @UpdateDateColumn({ name: 'updated_at', type: 'timestamptz' })
  updatedAt!: Date;

  @DeleteDateColumn({ name: 'deleted_at', type: 'timestamptz', nullable: true })
  deletedAt!: Date | null;
}
